# api-inventario

./: .coverage  Makefile  README.md  locustfile.py  pyproject.toml
features/: environment.py  inventario.feature
features/steps/: inventario_steps.py
instance/: inventario.db
inventario/: __init__.py  app.py  database.py  models.py  routes.py
tests/: conftest.py  test_database.py  test_models.py  test_routes.py
