[tool.poetry]
name = "inventario"
version = "0.1.0"
description = "API REST de inventario con suite completa de pruebas"
authors = ["Tu Nombre "]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
behave = "^1.2.6"
locust = "^2.17.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=inventario --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["inventario"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"